style.css
html {
  background-color: #faf8c6;
  font-family: 'Prompt', sans-serif;
  color:rgb(54, 11, 11);
}
body {
  width: 85%;
  height: 100vh;
  margin: 0 auto;
  position: relative;
  bottom: 0;
}
#topOfPage {
  width: 100%;
  display: flex;
  position: relative;
  top: -1rem;
}
#LibraryHeader{
  width: 50%;
  display: flex;
  align-items: center;
  font-size: 3.5rem;
}
#LibraryHeader p{
  margin-left: 5%;
}
#libraryLog {
  width: 50%;
  display: flex;
  justify-content: flex-end;
}
#libraryLog div {
  margin-right: 4%;
  margin-top: 8%;
}
.readDiv {
  padding-left: 45px;
  border: 1px solid rgba(54, 11, 11, 0.39);
  background-color: rgb(197, 164, 101);
  margin-right: 1rem;
}
#clearAllBooks {
  background-color:#ceb460;
  border: 1px solid #977d26;
  color: rgb(54, 11, 11);
  border-radius: 5px;
  box-shadow: 3px 3px 2px rgba(71, 4, 4, 0.267);
  width: 6.5rem;
  height: 2rem;
  font-family: 'Prompt', sans-serif;
  transition: 0.3s;
}
#clearAllBooks:hover{
  font-size: 14px;
  width: 6.7rem;
  height: 2.2rem;
  cursor: pointer;
  background-color:#ac9447;
}
#newBookButton {
  cursor: pointer;
  font-size: 3rem;
  color:rgb(54, 11, 11);
  background-color: #ceb460;
  box-shadow: 1px 1px 1px rgba(49, 47, 47, 0.486);
  border-radius: 100%;
  border: currentColor;
  height: 4rem;
  width: 4rem;
  transition: 0.5s;
  position: fixed;
  bottom: 2rem;
  right: 2rem;
  outline: none;
  text-align: center;
  line-height: normal;
}
#newBookButton:hover {
  transform: rotate(90deg) scale(1.1);
}
#libraryContainer {
  width: 100%;
  height:max-content;
  min-height: 50vh;
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 5%;
}
#libraryContainer div {
  height: 13rem;
  padding:1rem 2rem 1rem 2rem;
  background-color:rgb(197, 164, 101);
  width: 25%;
  border: 2px solid rgba(54, 11, 11, 0.39);
  border-radius: 5px;
  box-shadow:4px 4px 5px rgba(78, 7, 7, 0.582);
  margin: 0.5rem;
  position: relative;
  transition: 0.2s;
  -webkit-animation-name: animdiv;
  -webkit-animation-duration: 0.4s;
  animation-name: animdiv;
  animation-duration: 0.4s;
}
@-webkit-keyframes animdiv {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@keyframes animdiv {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
#libraryContainer div button {
  background-color: rgb(197, 164, 101);
  color:rgb(54, 11, 11);
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
  border: 1px transparent;
  cursor: pointer;
  font-size: 1.3rem;
  transition: 0.2s;
  outline: none;
}
#libraryContainer div button:hover {
  transform: scale(1.2);
  text-shadow:0px 0px 3px #a33918;
}
#libraryContainer div header {
  font-size: 1.5rem;
  text-align: center;
  margin-bottom: 2rem;
  text-decoration: underline;
}
#templateCard {
  display: none;
}
.notRead {
  background-color:gray !important;
}
footer a {
  color: rgb(54, 11, 11);
}
footer {
  position: relative;
  height: 9vh;
  display: flex;
  flex-direction: column;
  justify-content:flex-end;
}

.modal {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: none;
  background-color:rgb(0, 0, 0);
  background-color:rgba(0, 0, 0, 0.4);
}

.modalContent {
  background-color: #e4e2a8;
  margin: 8% auto;
  padding: 20px;
  border: 1px solid #888;
  width: 30%;
  height: 60%;
  font-size: 20px;
  border-radius: 10px;
  -webkit-animation-name: animate;
  -webkit-animation-duration: 0.4s;
  animation-name: animate;
  animation-duration: 0.4s;
}

@-webkit-keyframes animate {
  from {
    opacity: 0;
  }
  to {
    top: 0;
    opacity: 1;
  }
}

@keyframes animate {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.modalContent #form {
display: flex;
flex-direction: column;
}

.modalContent input {
  margin-bottom: 3%;
  height: 1.5rem;
  border-radius: 10px;
  border: 2px solid rgba(54, 11, 11, 0.774);
  font-size: 17px;
}

#submitBtn {
  display:block;
  margin: 0 auto;
  padding: 1rem;
  width: 10rem;
  background-color: #a33918;
  border-radius: 7px;
  border:2px solid rgba(54, 11, 11, 0.658);
  cursor: pointer;
  font-family: 'Prompt', sans-serif;
  font-size: 18px;
  color: rgb(40, 11, 11);
}

#submitBtn:hover {
  background-color:#722710;
}

.close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
  
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

.invalid {
  border : 2px solid red !important;
}




.switch {
  position: relative;
  display: inline-block;
  width: 36px;
  height: 19.4px;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #a5a5a1;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 15.6px;
  width: 15.6px;
  left: 2px;
  bottom: 2px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #e97b32;
}

input:focus + .slider {
  box-shadow: 0 0 1px #f38721;
}

input:checked + .slider:before {
  -webkit-transform: translateX(16px);
  -ms-transform: translateX(16px);
  transform: translateX(16px);
}

.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

#libraryContainer div section {
  margin-top: 2.5rem;
  margin-left: 0.5rem;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

#libraryContainer div label {
  position: relative;
}

@media(max-width: 1080px) {
  body {
    width: 100%;
  }
  #topOfPage {
    flex-direction: column;
    align-items: center;
  }
  #LibraryHeader {
    width: 100%;
    justify-content: center;
  }
  #libraryLog{
    margin-top: -30px;
    justify-content: center;
  }
  #clearAllBooks {
    margin-left: 20px;
  }
  #libraryContainer {
    justify-content: center;
    align-items: center;
  }
  #libraryContainer div {
    min-width: 3rem;
  }
  #created {
    font-size: 13px;
    text-align: center;
    margin-bottom: -4px;
  }
  #newBookButton {
    bottom: 3rem;
    right: 1.5rem;
  }
}

